BM49: creating documentation for APIs products management
